<resources>
    <string name="cart_title">Cart</string>
    <string name="subtotal">Subtotal</string>
    <string name="shipping">Shipping</string>
    <string name="total">Total</string>
    <string name="checkout">Checkout</string>
    <string name="or">Or</string>
    <string name="card_information">Card Information</string>
    <string name="card_number">Card number</string>
    <string name="country">Country or region</string>
    <string name="us">United States</string>
    <string name="zip">Zip Code</string>
    <string name="cvc">CVC</string>
    <string name="save_for_future">Save this card for future payments</string>
    <string name="enter_new_payment_method">Enter New Payment Method</string>
    <string name="pay_amount">Pay %s</string>
    <string name="mm_yy">MM/YY</string>
    <string name="close">close</string>
    <string name="customer_information">Customer Information</string>
    <string name="customer_address">Billing Address</string>
    <string name="address_line_1">Address Line 1</string>
    <string name="address_line_2">Address Line 2</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="customer_email">Customer Email</string>
    <string name="customer_name">Customer Name</string>
    <string name="done">Done</string>
    <string name="error_name_required">Enter first and last name</string>
    <string name="error_email_invalid">Enter a valid email address</string>
    <string name="error_address_required">Address line 1 is required</string>
    <string name="error_city_required">City is required</string>
    <string name="error_state_required">State is required</string>
    <string name="error_zip_invalid">Enter a 5-digit zip code</string>
    <string name="error_country_required">Select a country</string>
    <string name="error_card_invalid">Enter valid card details</string>
</resources>
